fixed overflowing text and images in posts (#1059)

--- a/components/CKEditor/CKEditor.css
+++ b/components/CKEditor/CKEditor.css
@@ -411,6 +411,10 @@
 }
 
 /* Custom CSS */
+.ck-content img {
+  max-width: 100%;
+}
+
 .eln .ck.ck-sticky-panel .ck-sticky-panel__content_sticky {
   position: absolute !important;
   z-index: 0 !important;
